--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ repo:             https://github.com/cast-org/figuration
 # Downloads
 download:
   source:         https://github.com/cast-org/figuration/archive/v0.1.0.zip
-  dist:           https://github.com/cast-org/figuration/releases/download/v0.1.0/figuration-v0.1.0-dist.zip
+  dist:           https://github.com/cast-org/figuration/releases/download/v0.1.0/figuration-0.1.0-dist.zip
 
 
 # CDN settings
