--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ node_js:
   - "4"
   - "6"
 before_install:
+  - rvm install 2.2
+  - rvm use 2.2 --fuzzy
+  - npm install -g npm@3
+install:
   - bundle install --deployment --jobs=3
   - npm install -g grunt-cli
   - npm install
