--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ node_js:
   - "4"
   - "6"
 before_install:
+  # Remove ./node_modules/.bin from PATH so node-which doesn't replace Unix which and cause RVM to barf. See https://github.com/travis-ci/travis-ci/issues/5092
+  - export PATH=$(python -c 'from sys import argv;from collections import OrderedDict as od;print(":".join(od((p,None) for p in argv[1].split(":") if p.startswith("/")).keys()))' "$PATH")
   - rvm install 2.2
   - rvm use 2.2 --fuzzy
   - npm install -g npm@3
@@ -14,5 +16,12 @@ install:
   - bundle install --deployment --jobs=3
   - npm install -g grunt-cli
   - npm install
+cache:
+  directories:
+    - node_modules
+    - vendor/bundle
+env:
+  global:
+    - NPM_CONFIG_PROGRESS="false"
 matrix:
   fast_finish: true
