--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 ﻿language: node_js
-#dist: trusty
-#sudo: required
+sudo: required
+dist: trusty
 git:
   depth: 10
 node_js:
@@ -13,7 +13,7 @@ before_install:
   - rvm use 2.2 --fuzzy
   - npm install -g npm@3
 install:
-  # bundle install --deployment --jobs=3
+  - bundle install --deployment --jobs=3
   - npm install -g grunt-cli
   - npm install
 cache:
