--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,22 @@
-﻿sudo: required
-dist: trusty
+﻿sudo: false
+#sudo: required
+#dist: trusty
 language: node_js
 git:
   depth: 10
 node_js:
   - "4"
   - "6"
-before_install:
+#before_install:
+install:
   # Remove ./node_modules/.bin from PATH so node-which doesn't replace Unix which and cause RVM to barf. See https://github.com/travis-ci/travis-ci/issues/5092
   - export PATH=$(python -c 'from sys import argv;from collections import OrderedDict as od;print(":".join(od((p,None) for p in argv[1].split(":") if p.startswith("/")).keys()))' "$PATH")
   - rvm install 2.2
   - rvm use 2.2 --fuzzy
-  - npm install -g npm@3
-install:
+  - npm install npm@3
+#install:
   - bundle install --deployment --jobs=3
-  - npm install -g grunt-cli
+  - npm install grunt-cli
   - npm install
 cache:
   directories:
