--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,14 @@ git:
 node_js:
   - "4"
   - "6"
-#before_install:
-install:
+before_install:
   # Remove ./node_modules/.bin from PATH so node-which doesn't replace Unix which and cause RVM to barf. See https://github.com/travis-ci/travis-ci/issues/5092
   - export PATH=$(python -c 'from sys import argv;from collections import OrderedDict as od;print(":".join(od((p,None) for p in argv[1].split(":") if p.startswith("/")).keys()))' "$PATH")
   - rvm install 2.2
   - rvm use 2.2 --fuzzy
   - npm install npm@3
-#install:
-  - bundle install --deployment --jobs=3
+install:
+  - bundle install --jobs=3
   - npm install grunt-cli
   - npm install
 cache:
