--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-compress": "^1.3.0",
     "grunt-contrib-concat": "^1.0.0",
+    "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.0",
     "grunt-contrib-jshint": "~1.0.0",
@@ -47,6 +48,7 @@
     "grunt-jscs": "~3.0.1",
     "grunt-postcss": "^0.8.0",
     "grunt-sass": "^1.0.0",
+    "grunt-saucelabs": "^9.0.0",
     "grunt-scss-lint": "^0.3.8",
     "load-grunt-tasks": "^3.4.0",
     "qunitjs": "^2.0.0",
