--- a/grunt/sauce_browsers.yml
+++ b/grunt/sauce_browsers.yml
@@ -13,7 +13,7 @@
   {
     browserName: "firefox",
     platform: "OS X 10.11",
-    version: "latest"
+    version: "latest-1"
   },
 
   # Mac Opera not currently supported by Sauce Labs
@@ -47,7 +47,7 @@
   {
     browserName: "firefox",
     platform: "Windows 10",
-    version: "latest"
+    version: "latest-1"
   },
 
   # Win Opera 15+ not currently supported by Sauce Labs
