try android in landscape mode

--- a/grunt/sauce_browsers.yml
+++ b/grunt/sauce_browsers.yml
@@ -78,6 +78,7 @@
     browserName: "android",
     deviceName: "Android Emulator",
     version: "latest",
-    deviceType: "phone"
+    deviceType: "phone",
+    deviceOrientation, "landscape"
   }
 ]
