tablet mode to try and see error

--- a/grunt/sauce_browsers.yml
+++ b/grunt/sauce_browsers.yml
@@ -78,7 +78,6 @@
     browserName: "android",
     deviceName: "Android Emulator",
     version: "latest",
-    deviceType: "phone",
-    deviceOrientation, "landscape"
+    deviceType: "tablet"
   }
 ]
