--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,49 @@
 ﻿#sudo: required
 dist: trusty
 language: node_js
+
 git:
-  depth: 10
+    depth: 10
+
+# For now, only build 'push' items on master branch
+# http://stackoverflow.com/questions/31882306/
+# Most contributions should come through pull requests
+# Helps limit overloading on Sauce tests
+branches:
+    only:
+        - master
+
 node_js:
-  - "4"
-  - "6"
+    - "4"
+    - "6"
+
 before_install:
-  # Remove ./node_modules/.bin from PATH so node-which doesn't replace Unix which and cause RVM to barf. See https://github.com/travis-ci/travis-ci/issues/5092
-  - export PATH=$(python -c 'from sys import argv;from collections import OrderedDict as od;print(":".join(od((p,None) for p in argv[1].split(":") if p.startswith("/")).keys()))' "$PATH")
-  - rvm install 2.2
-  - rvm use 2.2 --fuzzy
-  - npm install npm@3
+    # Remove ./node_modules/.bin from PATH so node-which doesn't replace Unix which and cause RVM to barf. See https://github.com/travis-ci/travis-ci/issues/5092
+    - export PATH=$(python -c 'from sys import argv;from collections import OrderedDict as od;print(":".join(od((p,None) for p in argv[1].split(":") if p.startswith("/")).keys()))' "$PATH")
+    - rvm install 2.2
+    - rvm use 2.2 --fuzzy
+    - npm install npm@3
+
 install:
-  - bundle install --jobs=3
-  - npm install
+    - bundle install --jobs=3
+    - npm install
+
 cache:
-  directories:
-    - node_modules
-    - vendor/bundle
+    directories:
+        - node_modules
+        - vendor/bundle
+
 env:
-  global:
-    - NPM_CONFIG_PROGRESS="false"
+    global:
+        - NPM_CONFIG_PROGRESS="false"
+    matrix:
+        - TEST_SAUCE="false"
+
 matrix:
-  fast_finish: true
+    fast_finish: true
+    exclude:
+        - node_js: "6"
+          env: TEST_SAUCE="false"
+    include:
+        - node_js: "6"
+          env: TEST_SAUCE="true"
