Resolve SuaceLabs error with iOS test
Sauce started erroring on iOS test with:
Unsupported OS/browser/version/device combo: OS: 'unspecified', Browser: 'iphone', Version: '9.3.', Device: 'iPhone Simulator', Screen Resolution: '1024x768'
https://saucelabs.com/tests/88c4aec21f664e7593ab4f1ae473a38e

--- a/grunt/sauce_browsers.yml
+++ b/grunt/sauce_browsers.yml
@@ -53,8 +53,9 @@
   # Win Opera 15+ not currently supported by Sauce Labs
 
   {
-    browserName: "iphone",
-    platform: "OS X 10.10",
+    platform: "iOS",
+    browserName: "safari",
+    deviceName: "iPhone Simulator",
     version: "latest"
   },
 
