--- a/grunt/sauce_browsers.yml
+++ b/grunt/sauce_browsers.yml
@@ -53,7 +53,7 @@
   # Win Opera 15+ not currently supported by Sauce Labs
 
   {
-    platformName: "iOS",
+    platform: "iOS",
     browserName: "Safari",
     deviceName: "iPhone Simulator",
     platformVersion = '9.3',
