--- a/grunt/sauce_browsers.yml
+++ b/grunt/sauce_browsers.yml
@@ -59,9 +59,8 @@
   {
     platformName: "iOS",
     browserName: "Safari",
-    deviceName: "iPhone 6 Simulator",
-    platformVersion = "9.3"
-  },
+    deviceName: "iPhone Simulator",
+    platformVersion: "9.3"
 
   # Linux (unofficial)
   # =====
