--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "grunt-scss-lint": "^0.3.8",
     "load-grunt-tasks": "^3.4.0",
     "qunitjs": "^2.0.0",
+    "postcss-flexbugs-fixes": "^2.0.0",
     "time-grunt": "^1.3.0"
   }
 }
