double up some settings, see what happens

--- a/grunt/sauce_browsers.yml
+++ b/grunt/sauce_browsers.yml
@@ -60,7 +60,9 @@
     platformName: "iOS",
     browserName: "Safari",
     deviceName: "iPhone Simulator",
-    platformVersion: "9.3"
+    platformVersion: "latest",
+    platform: "iOS",
+    version: "latest"
   },
 
   # Linux (unofficial)
