Disable iOS test for Sauce
Failing due to configuration change at Sauce.  Disabling for now since it is not mission critical at the moment.

Will continue testing and/or check with Sauce support.

--- a/grunt/sauce_browsers.yml
+++ b/grunt/sauce_browsers.yml
@@ -52,11 +52,11 @@
 
   # Win Opera 15+ not currently supported by Sauce Labs
 
-  {
-    browserName: "iphone",
-    platform: "OS X 10.10",
-    version: "latest"
-  },
+  #{
+  #  browserName: "iphone",
+  #  platform: "OS X 10.10",
+  #  version: "latest"
+  #},
 
   # iOS Chrome not currently supported by Sauce Labs
 
