Fix scss_files paths
Hopefully this will resolve Hound errors

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -1,5 +1,7 @@
 # Default application configuration that all configurations inherit from.
-scss_files: "**/*.scss"
+scss_files:
+    - "scss/**/*.scss"
+    - "docs/assets/scss/**/*.scss"
 
 exclude:
   - "scss/base/_normalize.scss"
