--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "style": "dist/css/figuration.css",
   "sass": "scss/figuration.scss",
+  "main": "./js/_npm.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/cast-org/figuration.git"
