Additional items for Sass lint property order

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -146,6 +146,7 @@ linters:
       - flex-align
       - flex-basis
       - flex-direction
+      - flex-wrap
       - flex-flow
       - flex-grow
       - flex-order
@@ -222,6 +223,7 @@ linters:
       - word-spacing
       - -ms-word-wrap
       - word-wrap
+      - overflow-wrap
       - -moz-tab-size
       - -o-tab-size
       - tab-size
