v2 - Utilities-Vertical Alignment: rebuild and responsive rework
Kill the existing vertical row alignment (`.valign-top/middle/bottom > .valign-item`) and implement responsive vertical align utilities.  Should allow for much more flexibility.

New doc page and kill old examples

--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -57,6 +57,7 @@
     - title: Sizing & Positioning
     - title: Spacing
     - title: Typography
+    - title: Vertical Alignment
 
 - title: Widgets
   pages:
