v2- Component-Badges: rename .tag to .badge to remove wordpress confict

--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -30,6 +30,7 @@
 - title: Components
   pages:
     - title: Alerts
+    - title: Badges
     - title: Breadcrumb
     - title: Button Group
     - title: Cards
@@ -42,7 +43,6 @@
     - title: Navs
     - title: Pagination
     - title: Progress
-    - title: Tags
 
 - title: Utilities
   pages:
