split util pages, update navbar examples

--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -52,10 +52,11 @@
     - title: Display Property
     - title: Flexbox
     - title: Icons
+    - title: Position
     - title: Responsive Embeds
     - title: Responsive Floats
     - title: Screen Readers & Visibility
-    - title: Sizing & Positioning
+    - title: Sizing
     - title: Spacing
     - title: Typography
     - title: Vertical Alignment
