Change some Bootstrap references

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "figuration",
-  "description": "A feature rich, responsive, mobile first, accessible, front-end framework based on Bootstrap.",
+  "description": "A feature rich, responsive, mobile first, accessible, front-end framework inspired by Bootstrap.",
   "version": "2.0.0",
   "keywords": [
     "css",
