update hound config

--- a/.hound.yml
+++ b/.hound.yml
@@ -1,15 +1,12 @@
 ﻿fail_on_violations: true
 
 scss:
-  enabled: true
   config_file: .scss-lint.yml
 
-javascript:
-  enabled: true
+jshint:
   config_file: .jshintrc
 
 jscs:
-  enabled: true
   config_file: .jscsrc
 
 ruby:
