add clip-path to sass property sort order

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -176,6 +176,7 @@ linters:
       - -ms-overflow-y
       - -ms-overflow-style
       - clip
+      - clip-path
       - clear
       - font
       - font-family
