Break out image replacement util

--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -52,6 +52,7 @@
     - title: Display
     - title: Flexbox
     - title: Icons
+    - title: Image Replacement
     - title: Position
     - title: Responsive Embeds
     - title: Responsive Floats
