--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "load-grunt-tasks": "^3.4.0",
     "postcss-flexbugs-fixes": "^2.0.0",
     "qunitjs": "^2.0.0",
+    "shelljs": "^0.7.7",
     "time-grunt": "^1.3.0"
   }
 }
