add and update property sort

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -151,6 +151,9 @@ linters:
       - flex-grow
       - flex-order
       - flex-pack
+      - align-items
+      - align-self
+      - justify-content
       - float
       - width
       - min-width
