rename embed-respsonsive => embed-fluid

--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -50,12 +50,12 @@
     - title: Clearfix
     - title: Color
     - title: Display
+    - title: Embed
     - title: Flexbox
+    - title: Floating
     - title: Icons
     - title: Image Replacement
     - title: Position
-    - title: Responsive Embeds
-    - title: Responsive Floats
     - title: Screen Readers
     - title: Sizing
     - title: Spacing
