--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "grunt-saucelabs": "^9.0.0",
     "grunt-scss-lint": "^0.5.0",
     "load-grunt-tasks": "^3.4.0",
+    "node-sass": "^4.5.3",
     "postcss-flexbugs-fixes": "^3.0.0",
     "qunitjs": "^2.0.0",
     "shelljs": "^0.7.7",
