--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "jquery": "1.9.1 - 3"
+    "jquery": ">=3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.0.0",
