--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ permalink:        pretty
 # Server
 source:           ./docs
 destination:      ./_gh_pages
+host:             0.0.0.0
 port:             9001
 baseurl:          ""
 url:              http://figuration.org
