add `direction` to property sort order

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -129,6 +129,7 @@ linters:
     min_properties: 2
     separate_groups: false
     order:
+      - direction
       - position
       - top
       - right
