--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "shelljs": "^0.7.7",
     "time-grunt": "^1.3.0"
   },
+  "engines": {
+    "node": ">=6"
+  },
   "files": [
     ".jscsrc",
     ".jshintrc",
