--- a/package.json
+++ b/package.json
@@ -51,10 +51,16 @@
     "grunt-sass": "^2.0.0",
     "grunt-saucelabs": "^9.0.0",
     "grunt-scss-lint": "^0.5.0",
+    "grunt-stylelint": "^0.9.0",
     "load-grunt-tasks": "^3.4.0",
     "postcss-flexbugs-fixes": "^3.0.0",
     "qunitjs": "^2.4.1",
     "shelljs": "^0.7.7",
+    "stylelint": "^8.1.1",
+    "stylelint-config-recommended-scss": "^2.0.0",
+    "stylelint-config-standard": "^17.0.0",
+    "stylelint-order": "^0.7.0",
+    "stylelint-scss": "^2.1.0",
     "time-grunt": "^1.3.0"
   },
   "engines": {
