Update package include file list
LICENSE is included by default

--- a/package.json
+++ b/package.json
@@ -69,10 +69,9 @@
   "files": [
     ".jscsrc",
     ".jshintrc",
-    ".scss-lint",
+    ".stylelint",
     "Gemfile",
     "Gruntfile.js",
-    "LICENSE",
     "dist",
     "grunt",
     "js",
