--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "figuration",
   "description": "A feature rich, responsive, mobile first, accessible, front-end framework inspired by Bootstrap.",
-  "version": "3.0.5",
+  "version": "4.0.0-alpha.0",
   "keywords": [
     "css",
     "sass",
