--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "url": "https://github.com/cast-org/figuration/issues"
   },
   "license": "MIT",
-  "dependencies": {
-    "jquery": ">=3.0.0"
+  "peerDependencies": {
+    "jquery": "1.9.1 - 3"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.5",
@@ -54,9 +54,9 @@
     "grunt-scss-lint": "^0.5.0",
     "grunt-stylelint": "^0.9.0",
     "load-grunt-tasks": "^3.4.0",
-    "postcss-flexbugs-fixes": "^3.0.0",
-    "qunitjs": "^2.4.1",
-    "shelljs": "^0.8.0",
+    "postcss-flexbugs-fixes": "^3.3.0",
+    "qunit": "^2.5.0",
+    "shelljs": "^0.8.1",
     "stylelint": "^8.4.0",
     "stylelint-config-recommended-scss": "^3.0.0",
     "stylelint-config-standard": "^18.0.0",
