--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,9 +4,9 @@
     "stylelint-order"
   ],
   "rules": {
-    "at-rule-empty-line-before": [null,
+    "at-rule-empty-line-before": [null, {
       "except": ["first-nested"]
-    ],
+    }],
     "at-rule-name-space-after": "always",
     "at-rule-no-vendor-prefix": true,
     "at-rule-semicolon-space-before": "never",
@@ -52,8 +52,10 @@
       "flex-wrap",
       "flex-flow",
       "flex-grow",
+      "flex-shrink",
       "flex-order",
       "flex-pack",
+      "align-content",
       "align-items",
       "align-self",
       "justify-content",
@@ -82,6 +84,18 @@
       "-ms-overflow-x",
       "-ms-overflow-y",
       "-ms-overflow-style",
+      "columns",
+      "column-count",
+      "column-fill",
+      "column-gap",
+      "column-rule",
+      "column-rule-width",
+      "column-rule-style",
+      "column-rule-color",
+      "column-span",
+      "column-width",
+      "orphans",
+      "widows",
       "clip",
       "clip-path",
       "clear",
@@ -98,6 +112,7 @@
       "font-emphasize-position",
       "font-emphasize-style",
       "font-smooth",
+      "src",
       "hyphens",
       "line-height",
       "color",
@@ -130,6 +145,8 @@
       "tab-size",
       "white-space",
       "vertical-align",
+      "direction",
+      "unicode-bidi",
       "list-style",
       "list-style-position",
       "list-style-type",
@@ -207,6 +224,9 @@
       "box-shadow",
       "opacity",
       "-ms-interpolation-mode",
+      "page-break-after",
+      "page-break-before",
+      "page-break-inside",
       "transition",
       "transition-delay",
       "transition-timing-function",
@@ -214,6 +234,8 @@
       "transition-property",
       "transform",
       "transform-origin",
+      "perspective",
+      "appearance",
       "animation",
       "animation-name",
       "animation-duration",
@@ -221,7 +243,10 @@
       "animation-timing-function",
       "animation-delay",
       "animation-iteration-count",
-      "animation-direction"
+      "animation-direction",
+      "animation-fill-mode",
+      "fill",
+      "stroke"
     ],
     "property-no-vendor-prefix": true,
     "rule-empty-line-before": null,
