--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -36,7 +36,7 @@
     - title: Cards
     - title: Input Group
     - title: Jumbotron
-    - title: List Group
+    - title: Lists
     - title: Media Object
     - title: Navbar
     - title: Navs
