--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -56,6 +56,7 @@
     - title: Icons
     - title: Position
     - title: Screen Readers
+    - title: Shadows
     - title: Sizing
     - title: Spacing
     - title: Typography
