--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -54,9 +54,9 @@
     - title: Flexbox
     - title: Floating
     - title: Icons
-    - title: Image Replacement
     - title: Position
     - title: Screen Readers
+    - title: Shadows
     - title: Sizing
     - title: Spacing
     - title: Typography
