--- a/.stylelintrc
+++ b/.stylelintrc
@@ -28,6 +28,9 @@
     "length-zero-no-unit": true,
     "max-empty-lines": 2,
     "max-line-length": null,
+    "media-feature-name-no-unknown": [true, {
+      "ignoreMediaFeatureNames": ["prefers-reduced-motion"]
+    }],
     "media-feature-name-no-vendor-prefix": true,
     "media-feature-parentheses-space-inside": "never",
     "media-feature-range-operator-space-after": "always",
