--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^8.5.0",
+    "eslint": "^4.19.1",
+    "eslint-plugin-compat": "^2.2.0",
+    "eslint-plugin-figuration": "file:./grunt/eslint-plugin-figuration",
     "glob": "^7.1.2",
     "grunt": "^1.0.2",
     "grunt-contrib-clean": "^1.0.0",
@@ -40,13 +43,12 @@
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^2.0.0",
-    "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-qunit": "^2.0.0",
     "grunt-contrib-uglify": "^3.3.0",
     "grunt-contrib-watch": "^1.1.0",
+    "grunt-eslint": "^20.1.0",
     "grunt-html": "^9.0.0",
     "grunt-jekyll": "^0.4.7",
-    "grunt-jscs": "~3.0.1",
     "grunt-postcss": "^0.9.0",
     "grunt-rtlcss": "^2.0.1",
     "grunt-sass": "^2.1.0",
@@ -68,8 +70,8 @@
     "node": ">=6"
   },
   "files": [
-    ".jscsrc",
-    ".jshintrc",
+    ".eslintignore",
+    ".eslintrc.json",
     ".stylelint",
     "Gemfile",
     "Gruntfile.js",
@@ -77,5 +79,17 @@
     "grunt",
     "js",
     "scss"
+  ],
+  "browserslist": [
+    "last 1 major version",
+    ">= 1%",
+    "Chrome >= 49",
+    "Firefox >= 45",
+    "Edge >= 12",
+    "Explorer >= 10",
+    "iOS >= 9",
+    "Safari >= 9",
+    "Android >= 4.4",
+    "Opera >= 36"
   ]
 }
