--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ twitter:          https://twitter.com/figuration_org
 # Downloads
 download:
   source:         https://github.com/cast-org/figuration/archive/v3.0.5.zip
-  dist:           https://github.com/cast-org/figuration/releases/download/v3.0.5/figuration-v3.0.5-dist.zip
+  dist:           https://github.com/cast-org/figuration/releases/download/v3.0.5/figuration-3.0.5-dist.zip
 
 
 # CDN settings
