--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "jquery": "1.9.1 - 3"
   },
   "devDependencies": {
-    "autoprefixer": "^8.6.3",
-    "eslint": "^4.19.1",
+    "autoprefixer": "^8.6.4",
+    "eslint": "^5.0.1",
     "eslint-plugin-compat": "^2.4.0",
     "eslint-plugin-figuration": "file:./grunt/eslint-plugin-figuration",
     "glob": "^7.1.2",
@@ -46,16 +46,16 @@
     "grunt-contrib-qunit": "^2.0.0",
     "grunt-contrib-uglify": "^3.3.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-eslint": "^20.2.0",
+    "grunt-eslint": "^21.0.0",
     "grunt-html": "^9.0.0",
     "grunt-jekyll": "^0.4.7",
     "grunt-postcss": "^0.9.0",
     "grunt-rtlcss": "^2.0.1",
-    "grunt-sass": "^2.1.0",
+    "grunt-sass": "^3.0.0",
     "grunt-saucelabs": "^9.0.0",
-    "grunt-scss-lint": "^0.5.0",
     "grunt-stylelint": "^0.10.0",
     "load-grunt-tasks": "^4.0.0",
+    "node-sass": "^4.9.1",
     "postcss-flexbugs-fixes": "^3.3.1",
     "qunit": "^2.6.1",
     "shelljs": "^0.8.1",
