--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,14 @@
     "browser": true,
     "jquery": true
   },
-  "extends": ["eslint:recommended", "plugin:compat/recommended"],
-  "plugins": ["figuration"],
+  "extends": ["eslint:recommended"],
+  "plugins": ["compat", "figuration"],
   "globals": {
     "CFW_API": true
   },
   "rules": {
     // Plugins
+    "compat/compat": "error",
     "figuration/figuration-camelcase": ["error", {
         "exceptions": ["^CFW_", "^testCFW_"]
     }],
