--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "homepage": "http://figuration.org",
   "author": "CAST, Inc.",
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "blc": "blc --exclude-external --filter-level 3 --get --ordered --recursive --host-requests 4 --input http://localhost:3000/",
+    "http-server": "http-server --silent -p 3000",
+    "check-broken-links": "npm-run-all --parallel --race \"http-server -- _gh_pages/\" blc"
   },
   "style": "dist/css/figuration.css",
   "sass": "scss/figuration.scss",
@@ -33,6 +36,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.0.1",
+    "broken-link-checker": "^0.7.8",
     "eslint": "^5.2.0",
     "eslint-plugin-compat": "^2.5.1",
     "eslint-plugin-figuration": "file:./grunt/eslint-plugin-figuration",
@@ -54,6 +58,7 @@
     "grunt-sass": "^3.0.0",
     "grunt-saucelabs": "^9.0.0",
     "grunt-stylelint": "^0.10.0",
+    "http-server": "^0.11.1",
     "load-grunt-tasks": "^4.0.0",
     "node-sass": "^4.9.2",
     "postcss-flexbugs-fixes": "^4.0.0",
