Fix broken links

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ plugins:
 
 # Custom vars
 current_version:  4.0.0-alpha.1
-repo:             https://github.com/cast-org/figuration/tree/v4-dev
+repo:             https://github.com/cast-org/figuration
 changelog:        https://github.com/cast-org/figuration/releases/tag/v4.0.0-alpha.1
 twitter:          https://twitter.com/figuration_org
 
