package.json: Be very explicit about included files to keep system ones from showing up

--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
     "node": ">=8"
   },
   "files": [
-    "dist",
-    "js",
-    "scss"
+    "dist/{css,js}/*.{css,js,map}",
+    "js/*.js",
+    "scss/**/*.scss"
   ]
 }
