--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ node_js:
     - "10"
 
 install:
-    - bundle install --deployment --jobs=3 --retry=3 --clean
+    - bundle install --jobs=3
     - npm install
 
 cache:
