--- a/.stylelintrc
+++ b/.stylelintrc
@@ -258,6 +258,7 @@
       "fill",
       "stroke"
     ],
+    "property-blacklist": ["transition"],
     "property-no-vendor-prefix": true,
     "rule-empty-line-before": null,
     "scss/at-function-parentheses-space-before": "never",
