--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
-﻿language: node_js
+﻿addons:
+  chrome: stable
+
+language: node_js
 
 git:
     depth: 3
@@ -6,6 +9,9 @@ git:
 node_js:
     - "8"
     - "10"
+
+before_install:
+  - google-chrome-stable --product-version
 
 install:
     - bundle install --jobs=3
