--- a/grunt/sauce_browsers.yml
+++ b/grunt/sauce_browsers.yml
@@ -77,7 +77,7 @@
     deviceType: "phone"
   },
   {
-    platformName: "Android"
+    platformName: "Android",
     browserName: "chrome",
     deviceName: "Android Emulator",
     version: "latest",
