--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -53,6 +53,7 @@
     - title: Flexbox
     - title: Floating
     - title: Icons
+    - title: Overflow
     - title: Position
     - title: Screen Readers
     - title: Shadows
