--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "http-server": "^0.11.1",
     "load-grunt-tasks": "^4.0.0",
     "node-sass": "^4.11.0",
+    "postcss-calc": "^7.0.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "qunit": "^2.9.2",
     "shelljs": "^0.8.3",
