--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "grunt test",
     "blc": "blc --exclude-external --filter-level 3 --get --ordered --recursive --host-requests 4 --input http://localhost:3000/",
     "http-server": "http-server --silent -p 3000",
-    "check-broken-links": "npm-run-all --parallel --race \"http-server -- _gh_pages/\" blc"
+    "check-broken-links": "npm-run-all --parallel --race \"http-server -- _gh_pages/\" blc",
+    "js-test-karma": "karma start build/karma.conf.js"
   },
   "style": "dist/css/figuration.css",
   "sass": "scss/figuration.scss",
@@ -40,7 +41,7 @@
     "eslint": "^5.15.3",
     "eslint-plugin-compat": "^3.1.0",
     "eslint-plugin-figuration": "file:./grunt/eslint-plugin-figuration",
-    "glob": "^7.1.3",
+    "glob": "^7.1.4",
     "grunt": "^1.0.4",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.0",
@@ -57,10 +58,17 @@
     "grunt-rtlcss": "^2.0.1",
     "grunt-sass": "^3.0.2",
     "grunt-saucelabs": "^9.0.1",
-    "grunt-stylelint": "^0.10.1",
+    "grunt-stylelint": "^0.11.0",
     "http-server": "^0.11.1",
+    "jquery": "^3.4.1",
+    "karma": "^4.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^2.0.0",
+    "karma-detect-browsers": "^2.3.3",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-qunit": "^3.1.2",
     "load-grunt-tasks": "^4.0.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "postcss-calc": "^7.0.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "qunit": "^2.9.2",
@@ -69,7 +77,7 @@
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^3.0.0",
-    "stylelint-scss": "^3.5.4",
+    "stylelint-scss": "^3.6.1",
     "time-grunt": "^2.0.0"
   },
   "engines": {
