--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "blc": "blc --exclude-external --filter-level 3 --get --ordered --recursive --host-requests 4 --input http://localhost:3000/",
     "http-server": "http-server --silent -p 3000",
     "check-broken-links": "npm-run-all --parallel --race \"http-server -- _gh_pages/\" blc",
-    "js-test-karma": "karma start build/karma.conf.js"
+    "js-debug": "cross-env DEBUG=true karma start build/karma.conf.js",
+    "js-test-karma": "karma start build/karma.conf.js",
+    "js-test-cloud": "cross-env BROWSER=true npm run js-test-karma"
   },
   "style": "dist/css/figuration.css",
   "sass": "scss/figuration.scss",
@@ -38,6 +40,7 @@
   "devDependencies": {
     "autoprefixer": "^9.5.0",
     "broken-link-checker": "^0.7.8",
+    "cross-env": "^5.2.0",
     "eslint": "^5.15.3",
     "eslint-plugin-compat": "^3.1.0",
     "eslint-plugin-figuration": "file:./grunt/eslint-plugin-figuration",
@@ -56,6 +59,7 @@
     "grunt-jekyll": "^1.0.0",
     "grunt-postcss": "^0.9.0",
     "grunt-rtlcss": "^2.0.1",
+    "grunt-run": "^0.8.1",
     "grunt-sass": "^3.0.2",
     "grunt-saucelabs": "^9.0.1",
     "grunt-stylelint": "^0.11.0",
@@ -67,6 +71,7 @@
     "karma-detect-browsers": "^2.3.3",
     "karma-firefox-launcher": "^1.1.0",
     "karma-qunit": "^3.1.2",
+    "karma-sauce-launcher": "^2.0.2",
     "load-grunt-tasks": "^4.0.0",
     "node-sass": "^4.12.0",
     "postcss-calc": "^7.0.1",
