Widget-Dropown: Rebuild using recursive concept

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -181,7 +181,7 @@
     "new-parens": "error",
     "no-array-constructor": "error",
     "no-bitwise": "error",
-    "no-continue": "error",
+    "no-continue": "off",
     "no-inline-comments": "off",
     "no-lonely-if": "error",
     "no-mixed-operators": "off",
