--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "jquery": "1.9.1 - 3"
+    "jquery": "1.9.1 - 3",
+    "popper.js": "^1.15.0"
   },
   "devDependencies": {
     "@lodder/grunt-postcss": "^1.0.8",
@@ -68,6 +69,7 @@
     "linkinator": "^1.4.3",
     "load-grunt-tasks": "^5.0.0",
     "node-sass": "^4.12.0",
+    "popper.js": "^1.15.0",
     "postcss-calc": "^7.0.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "qunit": "^2.9.2",
