Dont allow mixed operators

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -185,7 +185,7 @@
     "no-continue": "off",
     "no-inline-comments": "off",
     "no-lonely-if": "error",
-    "no-mixed-operators": "off",
+    "no-mixed-operators": "error",
     "no-multi-assign": "error",
     "no-multiple-empty-lines": "error",
     "nonblock-statement-body-position": "error",
