add site data, stub out `<head>` and footer portions, some versioned assets

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "css-lint-vars-core": "fusv scss/",
     "css-lint-vars-docs": "fusv docs/4.0.0-beta.1/assets/scss/",
     "docs-serve": "npm-run-all --parallel docs-serve-*",
+    "docs-serve-copy": "cross-env-shell \"shx rm -rf site/$npm_package_versionShort/assets/dist/ && shx cp -r dist/ site/$npm_package_versionShort/assets/\"",
     "docs-serve-clean": "rimraf _siteout",
-    "docs-serve-11ty": "npx @11ty/eleventy --serve --port=8080",
+    "docs-serve-11ty": "eleventy --serve --port=8080",
+    "docs-prod": "npm run docs-serve-clean && cross-env ELEVENTY_ENV=production eleventy",
     "linkinator": "linkinator _gh_pages --recurse --silent --skip \"^(?!http://localhost)\"",
     "js-test-karma": "karma start build/karma.conf.js",
     "js-test-debug": "cross-env DEBUG=true npm run js-test-karma",
@@ -88,6 +90,7 @@
     "postcss-flexbugs-fixes": "^4.1.0",
     "qunit": "^2.9.2",
     "shelljs": "^0.8.3",
+    "shx": "^0.3.2",
     "stylelint": "^10.1.0",
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-config-standard": "^18.2.0",
