update sidebar, integrate docsearch, fix some contrast issues

--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
     "@lodder/grunt-postcss": "^1.0.9",
     "autoprefixer": "^9.6.1",
-    "cross-env": "^5.2.1",
+    "chokidar": "^3.1.0",
+    "cross-env": "^6.0.0",
     "eslint": "^6.3.0",
     "eslint-plugin-compat": "^3.3.0",
     "eslint-plugin-figuration": "file:./grunt/eslint-plugin-figuration",
@@ -80,7 +81,7 @@
     "karma-sauce-launcher": "^2.0.2",
     "linkinator": "^1.5.0",
     "load-grunt-tasks": "^5.1.0",
-    "markdown-it": "^9.1.0",
+    "markdown-it": "^10.0.0",
     "markdown-it-anchor": "^5.2.4",
     "markdown-it-toc-done-right": "^4.0.2",
     "node-sass": "^4.12.0",
@@ -91,9 +92,9 @@
     "qunit": "^2.9.2",
     "shelljs": "^0.8.3",
     "shx": "^0.3.2",
-    "stylelint": "^10.1.0",
-    "stylelint-config-recommended-scss": "^3.2.0",
-    "stylelint-config-standard": "^18.2.0",
+    "stylelint": "^11.0.0",
+    "stylelint-config-recommended-scss": "^4.0.0",
+    "stylelint-config-standard": "^19.0.0",
     "stylelint-order": "^3.1.0",
     "stylelint-scss": "^3.10.1",
     "time-grunt": "^2.0.0"
