re-implement syntax highlight with shorthcodes, fix css maps, more sidebar and toc changes

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "grunt test",
     "css-lint-vars": "npm-run-all --continue-on-error --parallel css-lint-vars-*",
     "css-lint-vars-core": "fusv scss/",
-    "css-lint-vars-docs": "fusv docs/4.0.0-beta.1/assets/scss/",
+    "css-lint-vars-docs": "fusv site/4.0/assets/scss/",
     "docs-serve": "npm-run-all --parallel docs-serve-*",
     "docs-serve-copy": "cross-env-shell \"shx rm -rf site/$npm_package_versionShort/assets/dist/ && shx cp -r dist/ site/$npm_package_versionShort/assets/\"",
     "docs-serve-clean": "rimraf _siteout",
@@ -47,12 +47,10 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.9.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
     "@lodder/grunt-postcss": "^1.0.9",
     "autoprefixer": "^9.6.1",
-    "chokidar": "^3.1.0",
     "cross-env": "^6.0.0",
-    "eslint": "^6.3.0",
+    "eslint": "^6.5.1",
     "eslint-plugin-compat": "^3.3.0",
     "eslint-plugin-figuration": "file:./grunt/eslint-plugin-figuration",
     "find-unused-sass-variables": "^0.5.0",
@@ -89,6 +87,7 @@
     "popper.js": "^1.15.0",
     "postcss-calc": "^7.0.1",
     "postcss-flexbugs-fixes": "^4.1.0",
+    "prismjs": "^1.17.1",
     "qunit": "^2.9.2",
     "shelljs": "^0.8.3",
     "shx": "^0.3.2",
