restructure to support multi-version

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test": "grunt test",
     "css-lint-vars": "npm-run-all --continue-on-error --parallel css-lint-vars-*",
     "css-lint-vars-core": "fusv scss/",
-    "css-lint-vars-docs": "fusv site/4.0/assets/scss/",
-    "docs-serve": "npm-run-all --parallel docs-serve-*",
-    "docs-serve-copy": "cross-env-shell \"shx rm -rf site/$npm_package_versionShort/assets/dist/ && shx cp -r dist/ site/$npm_package_versionShort/assets/\"",
+    "css-lint-vars-docs": "cross-env-shell \"fusv site/assets/$npm_package_versionShort/scss/\"",
+    "docs-serve": "npm-run-all --parallel css-lint-vars-docs docs-serve-*",
+    "docs-serve-copy": "cross-env-shell \"shx rm -rf site/assets/$npm_package_versionShort/dist/ && shx cp -r dist/ site/assets/$npm_package_versionShort/\"",
     "docs-serve-clean": "rimraf _siteout",
     "docs-serve-11ty": "eleventy --serve --port=8080",
     "docs-prod": "npm run docs-serve-clean && cross-env ELEVENTY_ENV=production eleventy",
