--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "load-grunt-tasks": "^5.1.0",
     "markdown-it": "^10.0.0",
     "markdown-it-anchor": "^5.2.4",
+    "markdown-it-attrs": "^3.0.1",
     "markdown-it-toc-done-right": "^4.0.2",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
