--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "qunit": "^2.9.2",
     "shelljs": "^0.8.3",
     "shx": "^0.3.2",
+    "slugify": "^1.3.5",
     "stylelint": "^11.0.0",
     "stylelint-config-recommended-scss": "^4.0.0",
     "stylelint-config-standard": "^19.0.0",
