update linting, fix a few issues

--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "css-lint-vars": "npm-run-all --continue-on-error --parallel css-lint-vars-*",
     "css-lint-vars-core": "fusv scss/",
     "css-lint-vars-docs": "cross-env-shell \"fusv site/assets/$npm_package_versionShort/scss/\"",
+    "docs-build": "npm run docs-serve-clean && npm run docs-serve-copy && npm run docs-serve-clean && eleventy --silent",
     "docs-serve": "npm-run-all --parallel css-lint-vars-docs docs-serve-*",
     "docs-serve-copy": "cross-env-shell \"shx rm -rf site/assets/$npm_package_versionShort/dist/ && shx cp -r dist/ site/assets/$npm_package_versionShort/\"",
     "docs-serve-clean": "rimraf _siteout",
     "docs-serve-11ty": "eleventy --serve --port=8080",
     "docs-prod": "npm run docs-serve-clean && cross-env ELEVENTY_ENV=production eleventy",
-    "linkinator": "linkinator _gh_pages --recurse --silent --skip \"^(?!http://localhost)\"",
+    "linkinator": "linkinator _siteout --recurse --silent --skip \"^(?!http://localhost)\"",
     "js-test-karma": "karma start build/karma.conf.js",
     "js-test-debug": "cross-env DEBUG=true npm run js-test-karma",
     "js-test-cloud": "cross-env BROWSER=true npm run js-test-karma"
