--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "css-lint-vars": "npm-run-all --continue-on-error --parallel css-lint-vars-*",
     "css-lint-vars-core": "fusv scss/",
     "css-lint-vars-docs": "cross-env-shell \"fusv site/assets/$npm_package_versionShort/scss/\"",
-    "docs-build": "npm run docs-serve-clean && npm run docs-serve-copy && npm run docs-serve-clean && eleventy --quiet",
-    "docs-serve": "npm-run-all --parallel css-lint-vars-docs docs-serve-*",
+    "docs-build": "npm run docs-serve-clean && npm run docs-serve-copy && eleventy --quiet",
+    "docs-serve": "npm-run-all --parallel docs-serve-*",
     "docs-serve-copy": "cross-env-shell \"shx rm -rf site/assets/$npm_package_versionShort/dist/ && shx cp -r dist/ site/assets/$npm_package_versionShort/\"",
     "docs-serve-clean": "rimraf _siteout",
     "docs-serve-11ty": "eleventy --serve --port=8080",
