--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 ﻿addons:
-  sauce_connect: true
   chrome: stable
 
 language: node_js
@@ -35,3 +34,5 @@ matrix:
     include:
         - node_js: "10"
           env: TEST_SAUCE="true"
+          addons:
+            sauce_connect: true
