--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 ﻿addons:
   chrome: stable
+  hosts:
+    - lh
 
 language: node_js
 
@@ -35,7 +37,5 @@ matrix:
         - node_js: "12"
           env: TEST_SAUCE="true"
           addons:
-            sauce_connect: true
-            tunnel_domains: lh
-            hosts:
-              - lh
+            sauce_connect:
+              tunnel_domains: lh
