--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 ﻿addons:
   chrome: stable
-  hosts:
-    - lh
 
 language: node_js
 
@@ -37,6 +35,5 @@ matrix:
         - node_js: "12"
           env: TEST_SAUCE="true"
           addons:
-            hostname: lh
             sauce_connect:
-              tunnel_domains: lh
+              tunnel_domains: localhost
