--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 ﻿addons:
   chrome: stable
+  hosts:
+    - lh
 
 language: node_js
 
@@ -35,5 +37,7 @@ matrix:
         - node_js: "12"
           env: TEST_SAUCE="true"
           addons:
+            hostname: lh
             sauce_connect:
-              tunnel_domains: localhost
+              enabled: true
+              tunnel_domains: lh, localhost
