need to be higher?

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 ﻿addons:
   chrome: stable
+  sauce_connect:
+    enabled: true
+    tunnel_domains: lh
   hosts:
     - lh
 
@@ -33,9 +36,8 @@ matrix:
     exclude:
         - node_js: "12"
           env: TEST_SAUCE="false"
+          addons:
+            sauce_connect: false
     include:
         - node_js: "12"
           env: TEST_SAUCE="true"
-          addons:
-            sauce_connect:
-              tunnel_domains: lh
