--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 ﻿addons:
   chrome: stable
+  sauce_connect:
+    enabled: true
+    tunnel_domains: lh
+  hosts:
+    - lh
 
 language: node_js
 
@@ -34,5 +39,3 @@ matrix:
     include:
         - node_js: "12"
           env: TEST_SAUCE="true"
-          addons:
-            sauce_connect: true
