--- a/.browserslistrc
+++ b/.browserslistrc
@@ -3,11 +3,11 @@
 >= 1%
 last 1 major version
 not dead
-Chrome >= 57
-Firefox >= 52
+Chrome >= 60
+Firefox >= 60
 Edge >= 15
 Explorer >= 11
 iOS >= 10
 Safari >= 10
 Android >= 6
-Opera >= 44
+not ExplorerMobile <= 11
