--- a/package.json
+++ b/package.json
@@ -48,13 +48,14 @@
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.10.0",
-    "@lodder/grunt-postcss": "^2.0.2",
+    "@11ty/eleventy": "^0.11.0",
+    "@lodder/grunt-postcss": "^2.0.3",
     "autoprefixer": "^9.7.6",
     "cross-env": "^7.0.2",
-    "eslint": "^6.8.0",
-    "eslint-plugin-compat": "^3.5.1",
+    "eslint": "^7.0.0",
+    "eslint-plugin-compat": "^3.6.0",
     "eslint-plugin-figuration": "file:./build/eslint-plugin-figuration",
+    "eslint-plugin-node": "^11.1.0",
     "find-unused-sass-variables": "^2.0.0",
     "glob": "^7.1.6",
     "grunt": "^1.0.4",
@@ -81,7 +82,7 @@
     "linkinator": "^2.1.1",
     "load-grunt-tasks": "^5.1.0",
     "markdown-it": "^10.0.0",
-    "markdown-it-anchor": "^5.2.7",
+    "markdown-it-anchor": "^5.3.0",
     "markdown-it-attrs": "^3.0.2",
     "markdown-it-toc-done-right": "^4.0.2",
     "node-sass": "^4.14.1",
